--- a/sass/scss/igaro.scss
+++ b/sass/scss/igaro.scss
@@ -47,7 +47,6 @@ to { opacity: 0.1; }
     font-style: normal;
 }
 
-
 * {
     box-sizing: border-box;
 }
@@ -57,7 +56,7 @@ body {
     padding:0;
     background-color:#fff;
     height:100%;
-    color:#424347;
+    color:#111;
     font-family: "Open Sans", "Helvetica", "Arial";
     line-height:175%;
     font-size:12pt;
@@ -204,7 +203,10 @@ body {
       font-size:90%;
       &:hover { border:1px solid #CCC; border-top:1px solid #999; }
       &:focus { border-color:#2272b6; }
-      &:active { -webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,0.3); box-shadow: inset 0 1px 2px rgba(0,0,0,0.3); }
+      &:active { 
+        -webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,0.3);
+        box-shadow: inset 0 1px 2px rgba(0,0,0,0.3);
+        }
     }
 
     input:focus, select:focus, textarea:focus, button:focus, [contenteditable="true"]:focus {
