--- a/sass/scss/instance.list.scss
+++ b/sass/scss/instance.list.scss
@@ -1,7 +1,9 @@
 .instance-list {
-	padding-left:0;
-	>li {
-		list-style:none;
-		margin:0;
-	}
+	>ol {
+        padding-left:0;
+        >li {
+            list-style:none;
+            margin:0;
+        }
+    }
 }
