# This is a combination of 3 commits. # The first commit's message is: # This is a combination of 2 commits. # The first commit's message is:
# This is a combination of 2 commits.
# The first commit's message is:

Igaro 1.4

# The 2nd commit message will be skipped:

#	Fix up showcase page

# The 2nd commit message will be skipped:

#	Update instance.amd for metric progress

# The 2nd commit message will be skipped:

#	Add detailed module loading feedback to loader

# The 3rd commit message will be skipped:

#	Include new loading graphics

--- a/sass/scss/igaro.scss
+++ b/sass/scss/igaro.scss
@@ -350,17 +350,53 @@ body {
         background-color:#fff;
         color:#000;
         >div {
+
+            padding:1em;
+
             &.error {
                 background-color:#fff;
                 > div {
-                  padding:10em 1em 1em 1em;
+                  padding:9em 1em 1em 1em;
                   background-size:9em 9em;
                   background-position: 50% 0;
                   background-repeat: no-repeat;
-                  background-image: inline-image("error.svg");
+                  background-image: inline-image("igaro/error.svg");
+                }
+            }
+
+            &.working {
+                  background-position: 50% 50%;
+                  background-repeat: no-repeat;
+                  background-image: inline-image("igaro/spinner.gif");
+            }
+
+            >.worker {
+
+                border-radius:0.2em;
+                border: 1px solid #eee;
+                margin-bottom:0.5em;
+
+                &:not(:last-child) {
+                    margin-right:0.5em;
+                }
+
+                >div {
+                    width:1em;
+                    height:1em;
+                }
+
+                >.done {
+                    background-color:$common-trafficlight-green;
+                    box-shadow: 0 0 0.4em $common-trafficlight-green;
+                }
+
+                >.working {
+                    background-color:$common-trafficlight-red;
+                    box-shadow: 0 0 0.4em $common-trafficlight-red;
                 }
             }
         }
+
     }
 
     >.igaro-router-loading {
