# This is a combination of 2 commits. # The first commit's message is:
# This is a combination of 3 commits.
# The first commit's message is:
# This is a combination of 2 commits.
# The first commit's message is:

# This is a combination of 2 commits.
# The first commit's message is:

Igaro 1.4

# The 2nd commit message will be skipped:

#	Fix up showcase page

# The 2nd commit message will be skipped:

#	Update instance.amd for metric progress

# The 2nd commit message will be skipped:

#	Add detailed module loading feedback to loader

# The 3rd commit message will be skipped:

#	Include new loading graphics

# The 2nd commit message will be skipped:

#	Github Issue #30: Improve Documentation

--- a/sass/scss/route.main.compat.scss
+++ b/sass/scss/route.main.compat.scss
@@ -5,7 +5,7 @@
 body >.core-router >.main >.compat >.wrapper {
     @include layoutStandard;
 
-	>.instance-table >table >tbody >tr >td {
+	>p >.instance-table >table >tbody >tr >td {
 
         @include instanceTableColStatus
     }
