--- a/sass/scss/font.glyph.awesome/_variables.scss
+++ b/sass/scss/font.glyph.awesome/_variables.scss
@@ -1,10 +1,11 @@
 // Variables
 // --------------------------
 
-$fa-font-path:        "FontAwesome" !default;
+@import "../sass-global/variables.scss";
+
+$fa-font-path:        "#{$cdn}/fonts/FontAwesome" !default;
 $fa-font-size-base:   14px !default;
 $fa-line-height-base: 1 !default;
-//$fa-font-path:        "//netdna.bootstrapcdn.com/font-awesome/4.5.0/fonts" !default; // for referencing Bootstrap CDN font files directly
 $fa-css-prefix:       fa !default;
 $fa-version:          "4.5.0" !default;
 $fa-border-color:     #eee !default;
