--- a/sass/scss/font.opensans.scss
+++ b/sass/scss/font.opensans.scss
@@ -1,35 +1,38 @@
 /*# sourceURL=font.opensans.css */
+@import "../sass-global/variables.scss";
 
-/* Lights */
+/* Light */
 @font-face {
     font-family: 'Open Sans';
-    src: font-url('OpenSans/OpenSans-Lights-webfont.eot');
-    src: font-url('OpenSans/OpenSans-Light-webfont.eot?#iefix') format('embedded-opentype'),
-         font-url('OpenSans/OpenSans-Light-webfont.woff') format('woff'),
-         font-url('OpenSans/OpenSans-Light-webfont.ttf') format('truetype'),
-         font-url('OpenSans/OpenSans-Light-webfont.svg#OpenSansRegular') format('svg');
+    src: url("#{$cdn}/fonts/OpenSans/OpenSans-Light-webfont.eot");
+    src: url("#{$cdn}/fonts/OpenSans/OpenSans-Light-webfont.eot?#iefix") format('embedded-opentype'),
+         url("#{$cdn}/fonts/OpenSans/OpenSans-Light-webfont.woff") format('woff'),
+         url("#{$cdn}/fonts/OpenSans/OpenSans-Light-webfont.ttf") format('truetype'),
+         url("#{$cdn}/fonts/OpenSans/OpenSans-Light-webfont.svg#OpenSansLight") format('svg');
     font-weight: 200;
     font-style: normal;
 }
+
 /* Regular */
 @font-face {
     font-family: 'Open Sans';
-    src: font-url('OpenSans/OpenSans-Regular-webfont.eot');
-    src: font-url('OpenSans/OpenSans-Regular-webfont.eot?#iefix') format('embedded-opentype'),
-         font-url('OpenSans/OpenSans-Regular-webfont.woff') format('woff'),
-         font-url('OpenSans/OpenSans-Regular-webfont.ttf') format('truetype'),
-         font-url('OpenSans/OpenSans-Regular-webfont.svg#OpenSansRegular') format('svg');
+    src: url("#{$cdn}/fonts/OpenSans/OpenSans-Regular-webfont.eot");
+    src: url("#{$cdn}/fonts/OpenSans/OpenSans-Regular-webfont.eot?#iefix") format('embedded-opentype'),
+         url("#{$cdn}/fonts/OpenSans/OpenSans-Regular-webfont.woff") format('woff'),
+         url("#{$cdn}/fonts/OpenSans/OpenSans-Regular-webfont.ttf") format('truetype'),
+         url("#{$cdn}/fonts/OpenSans/OpenSans-Regular-webfont.svg#OpenSansRegular") format('svg');
     font-weight: 400;
     font-style: normal;
 }
+
 /* Bold */
 @font-face {
     font-family: 'Open Sans';
-    src: font-url('OpenSans/OpenSans-Bold-webfont.eot');
-    src: font-url('OpenSans/OpenSans-Bold-webfont.woff') format('woff'),
-         font-url('OpenSans/OpenSans-Bold-webfont.ttf') format('truetype'),
-         font-url('OpenSans/OpenSans-Bold-webfont.svg#OpenSansBold') format('svg'),
-         font-url('OpenSans/OpenSans-Bold-webfont.eot?#iefix') format('embedded-opentype');
+    src: url("#{$cdn}/fonts/OpenSans/OpenSans-Bold-webfont.eot");
+    src: url("#{$cdn}/fonts/OpenSans/OpenSans-Bold-webfont.eot?#iefix") format('embedded-opentype'),
+         url("#{$cdn}/fonts/OpenSans/OpenSans-Bold-webfont.woff") format('woff'),
+         url("#{$cdn}/fonts/OpenSans/OpenSans-Bold-webfont.ttf") format('truetype'),
+         url("#{$cdn}/fonts/OpenSans/OpenSans-Bold-webfont.svg#OpenSansBold") format('svg');
     font-weight: 700;
     font-style: normal;
 }
