--- a/sass/scss/igaro.scss
+++ b/sass/scss/igaro.scss
@@ -13,40 +13,6 @@ from { opacity: 0.1; }
 to { opacity: 0.1; }
 }
 
-/* Lights */
-@font-face {
-    font-family: 'Open Sans';
-    src: font-url('OpenSans/OpenSans-Lights-webfont.eot');
-    src: font-url('OpenSans/OpenSans-Light-webfont.eot?#iefix') format('embedded-opentype'),
-         font-url('OpenSans/OpenSans-Light-webfont.woff') format('woff'),
-         font-url('OpenSans/OpenSans-Light-webfont.ttf') format('truetype'),
-         font-url('OpenSans/OpenSans-Light-webfont.svg#OpenSansRegular') format('svg');
-    font-weight: 200;
-    font-style: normal;
-}
-/* Regular */
-@font-face {
-    font-family: 'Open Sans';
-    src: font-url('OpenSans/OpenSans-Regular-webfont.eot');
-    src: font-url('OpenSans/OpenSans-Regular-webfont.eot?#iefix') format('embedded-opentype'),
-         font-url('OpenSans/OpenSans-Regular-webfont.woff') format('woff'),
-         font-url('OpenSans/OpenSans-Regular-webfont.ttf') format('truetype'),
-         font-url('OpenSans/OpenSans-Regular-webfont.svg#OpenSansRegular') format('svg');
-    font-weight: 400;
-    font-style: normal;
-}
-/* Bold */
-@font-face {
-    font-family: 'Open Sans';
-    src: font-url('OpenSans/OpenSans-Bold-webfont.eot');
-    src: font-url('OpenSans/OpenSans-Bold-webfont.woff') format('woff'),
-         font-url('OpenSans/OpenSans-Bold-webfont.ttf') format('truetype'),
-         font-url('OpenSans/OpenSans-Bold-webfont.svg#OpenSansBold') format('svg'),
-         font-url('OpenSans/OpenSans-Bold-webfont.eot?#iefix') format('embedded-opentype');
-    font-weight: 700;
-    font-style: normal;
-}
-
 * {
     box-sizing: border-box;
 }
@@ -354,14 +320,10 @@ body {
             padding:1em;
 
             &.error {
-                background-color:#fff;
-                > div {
-                  padding:9em 1em 1em 1em;
-                  background-size:9em 9em;
-                  background-position: 50% 0;
-                  background-repeat: no-repeat;
-                  background-image: inline-image("igaro/error.svg");
-                }
+                margin:9em 1em 1em 1em;
+                background-position: 50% 4em;
+                background-repeat: no-repeat;
+                background-image: url("../images/igaro/error.gif");
             }
 
             &.working {
